--- a/style.css
+++ b/style.css
@@ -148,8 +148,9 @@ li i:first-child {
 
 /* UPGRADE BAR */
 .upgrade-bar {
-  background-color:rgba(8, 11, 18, 0.4);
-  justify-content: flex-end;
+  background-color:rgba(8, 11, 18, 0.9);
+  text-align: right;
+  line-height: 100px;
   align-items: center;
   position: fixed;
   top: 0;
@@ -160,14 +161,17 @@ li i:first-child {
 }
 
 .upgrade-btn {
-  font-weight: bold;
+  font-size: 15px;
+  cursor: pointer;
   text-transform: uppercase;
   text-decoration: none;
   color: white;
+  background-color: transparent;
   border: 1px solid white;
   border-radius: 20px;
   padding: 10px 20px;
   margin-right: 20px;
+
 }
 
 .upgrade-btn:hover {
@@ -183,15 +187,20 @@ li i:first-child {
   width: calc(100% - 250px);
   background-color:rgb(20, 25, 34);
   padding-bottom: 100px;
+  padding-left: 20px;
 }
 /* MENU */
 
 .menu {
+  width: 100%;
   margin-top: 110px;
   justify-content: center;
   padding-bottom: 50px;
 }
 
+.menu ul {
+  flex-wrap: wrap;
+}
 
 .menu ul li {
   list-style: none;
@@ -216,7 +225,8 @@ li i:first-child {
 .active {
   padding-top: 5px;
   width: 40px;
-  justify-content: center;
+  text-align: center;
+  margin: auto;
   border-bottom: 1px solid rgb(151, 222, 45);
   border-bottom-width:3px ;
 }
@@ -232,7 +242,6 @@ li i:first-child {
   font-size: 2rem;
   color: white;
   font-weight: bold;
-  padding-left: 20px;
 }
 
 .flex-wrap {
@@ -240,13 +249,13 @@ li i:first-child {
 }
 
 .card {
-  width: calc(100% / 6);
-  flex-direction: column;
-  align-items: center;
+  width: calc(100% / 6 - 1%) ;
+  text-align: center;
+  margin-right: 1%;
 }
 
 .card img {
-  height: 250px;
+  width: 100%;
 }
 
 .card p:first-of-type {
@@ -271,7 +280,6 @@ li i:first-child {
 
 .second-row p {
   color:rgb(116, 116, 116) ;
-  padding-left: 20px;
   padding-top: 10px;
 }
 
